// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputNumber Snap render InputNumber -- props className 1`] = `
<div
  class="at-input-number test"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props customStyle 1`] = `
<div
  class="at-input-number"
  style="color: red;"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props disabled 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn at-input-number--disabled"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    disabled=""
    type="number"
  />
  <div
    class="at-input-number__btn at-input-number--disabled"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props disabledInput 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    disabled=""
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props size 1`] = `
<div
  class="at-input-number at-input-number--lg"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props step 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props type(digit) 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="digit"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props type(number) 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props value & min = "" 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn at-input-number--disabled"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props value = "a" 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn at-input-number--disabled"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props value 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render InputNumber -- props width 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    style="width: 200px;"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;

exports[`InputNumber Snap render initial InputNumber 1`] = `
<div
  class="at-input-number"
>
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-subtract at-input-number__btn-subtract"
    />
  </div>
  <input
    class="at-input-number__input"
    type="number"
  />
  <div
    class="at-input-number__btn"
  >
    <div
      class="at-icon at-icon-add at-input-number__btn-add"
    />
  </div>
</div>
`;
